# duct-tape

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-exe.yml  ci.yml
examples/: коды.example.txt  настройки.example.txt
scripts/: build-exe.bat  run-gui.bat  run-gui.sh
src/omsreg/: __init__.py  __main__.py  cli.py
src/omsreg/core/: __init__.py  backup.py  convert.py  dbf.py  errors.py  logging_setup.py  textio.py
src/omsreg/gui/: __init__.py  app.py  config.py  log_panel.py  registry.py  spec.py  theme.py
src/omsreg/gui/plugins/: __init__.py  codes.py  economics.py  stat.py  talons.py
src/omsreg/utils/: __init__.py  remove_codes.py  remove_error_talons.py  stat_economics.py  stat_stacionar.py
tests/: conftest.py  test_convert.py  test_dbf.py  test_remove_codes.py  test_remove_error_talons.py  test_stat_economics.py  test_stat_stacionar.py  test_textio.py
